--- a/src/App.scss
+++ b/src/App.scss
@@ -1,79 +1,137 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Merriweather:wght@400;700&display=swap");
 
-$font: "Raleway", sans-serif;
+$heading-font: "Josefin Sans", sans-serif;
+$paragraph-font: "Merriweather", serif;
+$app-padding: 60px;
+$background-color: #efefef;
+$text-color: #333333;
+$accent-color: #006f79;
+$border-color: #cccccc;
+$preview-background: #f7f7f7;
+$preview-text: #808080;
 
 body {
   margin: 0;
 }
 
 .app {
-  font-family: $font;
-  padding: 20px 60px;
-  max-width: 700px;
-  overflow: auto;
-  height: 100%;
+  font-family: $paragraph-font;
+  padding: $app-padding;
+  background-color: $background-color;
+  color: $text-color;
+  display: flex;
+  justify-content: center;
 
+  h1,
+  h2,
+  h3 {
+    text-transform: uppercase;
+    font-family: $heading-font;
+  }
+  h1 {
+    margin-block-start: 0;
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2rem;
+    margin-block-end: 0;
+  }
+  h3 {
+    font-size: 1.25rem;
+    margin-block-start: 1.5rem;
+    margin-block-end: 0.5rem;
+  }
   a {
-    color: #068ca1;
-    font-weight: 600;
+    color: $accent-color;
+    text-decoration: none;
 
     &:hover {
-      color: #035763;
+      text-decoration: underline;
     }
   }
-
-  h3 {
-    margin-block-start: 1.5em;
-    margin-block-end: 0.5em;
-  }
-
-  b {
-    font-weight: 600;
-  }
-
-  .iconContainer {
-    display: flex;
-
-    .iconGroup {
-      display: flex;
-      align-items: center;
-      margin-right: 20px;
-      font-weight: 600;
-
-      .icon {
-        height: 24px;
-        margin-right: 8px;
-
-        &.veg {
-          height: 20px;
-        }
-      }
-    }
+  p {
+    line-height: 24px;
+    font-family: $paragraph-font;
   }
 
   button {
-    font-family: $font;
-    font-weight: 600;
+    font-family: $paragraph-font;
+    font-weight: 700;
+    font-size: 0.875rem;
     cursor: pointer;
     border-radius: 20px;
     padding: 4px 16px;
     outline: none;
-    border: 1px solid black;
-    background-color: white;
+    color: $text-color;
+    border: 2px solid $text-color;
+    background-color: transparent;
 
     &.refresh {
       margin: 20px 0 8px 0;
     }
-
     &:hover {
-      background-color: rgba(0, 0, 0, 0.1);
+      color: black;
+      background-color: rgba(0, 111, 121, 0.15);
     }
   }
 
-  footer {
-    position: fixed;
-    bottom: 0;
-    padding: 20px 0;
-    font-style: italic;
+  .recipeData {
+    max-width: 700px;
+
+    .iconContainer {
+      display: flex;
+
+      .iconGroup {
+        display: flex;
+        align-items: center;
+        margin-right: 20px;
+        font-weight: 700;
+
+        .icon {
+          height: 24px;
+          margin-right: 8px;
+          &.veg {
+            height: 20px;
+          }
+        }
+      }
+    }
+  }
+  .recipePreview {
+    min-width: 50vw;
+    height: calc(100vh - #{$app-padding} * 2);
+    margin-left: $app-padding;
+
+    .preview {
+      width: 100%;
+      height: 100%;
+      border: 1px solid $border-color;
+      border-radius: 8px;
+
+      &.none {
+        background-color: $preview-background;
+        color: $preview-text;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .app {
+    padding: 40px;
+    flex-direction: column;
+
+    .recipeData {
+      margin-bottom: 40px;
+      width: 100%;
+    }
+    .recipePreview {
+      width: 100%;
+      margin-left: 0;
+      max-height: 700px;
+    }
   }
 }
